# blog

./: .gitignore  22.3.25  404.html  index.html  pyproject.toml
.github/workflows/: deploy.yml
qndes-diary/: mkdocs.yml
qndes-diary/docs/: 29.06.25.md  index.md
qndes-diary/docs/blog/: 22.3.25.md  29.06.25.md
qndes-diary/site/: 404.html  index.html
qndes-diary/site/22.3.25/: index.html
qndes-diary/site/search/: search_index.json
qndes-homepage/: mkdocs.yml
qndes-homepage/docs/: CV.md  index.md
qndes-homepage/docs/blog/: index.md
qndes-homepage/docs/blog/posts/: 22.03.25.md  29.06.25.md
search/: search_index.json
