[project]
name = "qndes-blog"
version = "0.1.0"
description = "my blog"
authors = [
    {name = "Andreas Volkhardt",email = "avolkha1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.6.9,<10.0.0)",
    "mkdocs-landing (>=0.0.8,<0.0.9)",
    "mkdocs-simple-blog (>=0.2.0,<0.3.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
